--- a/pages/live/live.wxss
+++ b/pages/live/live.wxss
@@ -22,17 +22,29 @@ image{
 }
 
 .live-status{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   position: absolute;
   top: 20rpx;
   right: 30rpx;
+  padding: 6rpx 20rpx;
   width: 100rpx;
-  height: 30rpx;
-  text-align: center;
-  line-height: 30rpx;
   font-size: 24rpx;
   color: #FFF;
   border: 1px solid #FFF;
   border-radius: 20rpx;
+}
+
+.live-status-icon{
+  width: 16rpx;
+  height: 16rpx;
+  border-radius: 50%;
+  background-color: #BBB;
+}
+
+.live-status-active{
+  background-color: red;
 }
 
 .live-info{
@@ -65,9 +77,6 @@ image{
 }
 
 .live-audience{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   height: 100%;
 }
 
@@ -77,7 +86,9 @@ image{
 }
 
 .live-audience-count{
-  margin-left: 20rpx;
+  margin-top: 10rpx;
+  width: 40rpx;
+  text-align: center;
   font-size: 28rpx;
 }
 
