修改ios兼容问题
2018-07-06 16:17

--- a/pages/live/live.wxml
+++ b/pages/live/live.wxml
@@ -43,6 +43,7 @@
     </view>
   </view>
  </view> 
+ <view style='height: 100rpx;'></view>
 <!-- 发起直播按钮 -->
 <view class='release-live' bindtap='releaseLive'>发起直播</view>
 
