--- a/pages/liveDetail/liveDetail.wxml
+++ b/pages/liveDetail/liveDetail.wxml
@@ -44,14 +44,22 @@
     bindchange='changeSwiper' wx:if='{{!isAll}}'>
     <swiper-item class="swiper-item">
       <view class='live-notice'>
-        <view class='live-notice-title'>直播公告</view>
+        <view class='live-notice-title'>
+          <view>直播公告</view>
+          <view class='totalOnline'>当前在线人数: {{totalOnline}}</view>
+        </view>
         <view class='live-notice-content'>
           绿色直播、对直播内容进行24小时在线巡查，任何传播违法、违规、低俗、暴力等不良信息的行为将会封停账号，切勿于他人私下交易转账，以免上当受骗
         </view>
       </view>
       <scroll-view class='live-chat' style='height: {{chatHeight}}rpx;' scroll-y='{{true}}' 
         scroll-into-view='{{last_chat}}'>
-        <view class='live-chat-item' wx:for='{{chatList}}' wx:key='' id="{{'chat' + index}}">
+        <view class='live-chat-item' wx:for='{{chatList}}' wx:key='' id="{{'chat' + index}}"
+          wx:if='{{item.type == "system"}}'>
+          <text style='color: #66CC00;'>系统:</text> {{item.content}}
+        </view>
+        <view class='live-chat-item' wx:for='{{chatList}}' wx:key='' id="{{'chat' + index}}"
+          wx:if='{{item.type == "user"}}'>
           <text style='color: #3399FF;'>{{item.memberName}}:</text> {{item.content}}
         </view>
       </scroll-view>
