--- a/pages/liveDetail/liveDetail.wxss
+++ b/pages/liveDetail/liveDetail.wxss
@@ -100,7 +100,14 @@ image{
 }
 
 .live-notice-title{
+  display: flex;
+  justify-content: space-between;
   font-size: 32rpx;
+}
+
+.totalOnline{
+  font-size: 28rpx;
+  color: #BBB;
 }
 
 .live-notice-content{
