--- a/pages/liveShare/liveShare.wxml
+++ b/pages/liveShare/liveShare.wxml
@@ -77,7 +77,7 @@
 <!-- 验证手机号按钮 -->
 <view class='release-live' wx:if='{{!isLogin && checkMobilePhone}}'>
   <view class='button-block'>
-    验证手机号
+    进入直播间
     <button class='button' open-type='getPhoneNumber' bindgetphonenumber='bindPhoneNumberButtonTap'>
     </button>
   </view>
