--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,13 +1,29 @@
 <wxs module="filter" src="../../utils/filters.wxs"></wxs>
 <view class='wraper'>
   <view class='top-box'></view>
-  
+  <view class='box_userInfo'>
+    <view class='userInfo'>
+      <view class='userInfo_photo'>
+        <open-data type='userAvatarUrl' class='userPhoto'></open-data>
+      </view>
+      <view class='userInfo_nick'>
+        <open-data type='userNickName'></open-data>
+      </view>
+    </view>
+    <view class='userInfo_phoneNumber'>
+    
+      <button class='getPhoneNumber' open-type='getPhoneNumber' bindgetphonenumber='getPhoneNumber'>
+        {{showPhoneNumber}}
+      </button>
+
+    </view>
+  </view>
   <view class='box_commodity'>
     <view class='commodity_photo'>
       <image src='{{filter.errorImage(product.image)}}' mode='aspectFill'></image>
     </view>
     <view class='commodity_describe'>
-      <view class="commodity_name">{{filter.overflow_hidden(product.productName, 16)}}</view>
+      <view class="commodity_name">{{product.productName}}</view>
       <view class="commodity_startTime">开始日期 : {{product.time}}</view>
       <view class="commodity_price">
         ￥{{filter.toFixed(product.productPrice, 2)}}
@@ -30,58 +46,6 @@
     </view>
     <view class='dis_ticket_name' >
        优惠券不可用
-    </view>
-  </view>
-
-  <view class='top-box'></view>
-
-  <view class='box_userInfo'>
-    <view class='userInfo'>
-      <view class='userInfo_photo'>
-        <open-data type='userAvatarUrl' class='userPhoto'></open-data>
-      </view>
-      <view class='userInfo_nick'>
-        <open-data type='userNickName'></open-data>
-      </view>
-    </view>
-    <view class='userInfo_phoneNumber'>
-      <button class='getPhoneNumber' open-type='getPhoneNumber' 
-        bindgetphonenumber='getPhoneNumber'>
-        {{showPhoneNumber}}
-      </button>
-    </view>
-  </view>
-  <view class='userInfo-row'>
-    <view class='userInfo-row-left'>
-      购买人姓名
-    </view>
-    <view class='userInfo-row-right'>
-      <input type='text' placeholder='请输入真实姓名' bindinput='changeRealName'>
-      </input>
-    </view>
-  </view>
-  <view class='userInfo-row'>
-    <view class='userInfo-row-left'>
-      购买人性别
-    </view>
-    <view class='userInfo-row-right overflow'>
-      <view class='user-gender {{gender == 0 ? "user-gender-active" : ""}}'
-        bindtap='changeGender' data-gender='0'>
-        女
-      </view>
-      <view class='user-gender {{gender == 1 ? "user-gender-active" : ""}}'
-        bindtap='changeGender' data-gender='1'>
-        男
-      </view>
-    </view>
-  </view>
-  <view class='userInfo-row'>
-    <view class='userInfo-row-left'>
-      健身顾问（推荐人）
-    </view>
-    <view class='userInfo-row-right'>
-      <input type='text' placeholder='请输入其姓名' bindinput='changeOrigin'>
-      </input>
     </view>
   </view>
 
