--- a/utils/filters.wxs
+++ b/utils/filters.wxs
@@ -65,71 +65,82 @@ var filters = {
       
       return value;
     },
-    /**
-     * 字符串null过滤
-     */
-    stringNull: function (str) {
-       if (str == "null" || str == null) {
-         return "暂无";
-       } else {
-         return str;
-       }
-    },
-
-    /**
-     * 手机号、银行卡号处理
-     */
-    getStarNumberStr: function (str,headLength,footLength) {
-       var headIndex = headLength;
-       var footIndex = str.length - footLength;
-       var starLength = str.length - headLength - footLength;
-       var head = str.substring(0,headIndex);
-       var footer = str.substring(footIndex, str.length);
-       var star = "";
-       for(var x = 0; x < starLength; x++) {
-         star += "*";
-       }
-       return head + star + footer;
-    },
-
-    /**
-     * 手机号、银行卡混合模式
-     */
-    getStarNumberStrMix: function (str) {
-     
-      if (str.length == 11) {
-        // 手机号，默认3，4
-        str = filters.getStarNumberStr(str,3,4);
-      }
-      if (str.length > 11) {
-        // 银行卡，默认5，4
-        str = filters.getStarNumberStr(str,5,4);
-      }
-
-      return str;
-    },
-
-    /**
-     * 价格过滤
-     */
-    getPriceStr: function (str) {
-      if (str == "" || str == "null" || str == null || str == "undefined" || str == undefined || parseFloat(str) == 0) {
-         str = "免费";
+  /**
+   * 字符串null过滤
+   */
+  stringNull: function (str) {
+      if (str == "null" || str == null) {
+        return "暂无";
       } else {
-         str = "￥" + parseFloat(str).toFixed(2);
+        return str;
       }
-      return str;
-    },
+  },
 
-    /**
-     * 健身次数过滤
-     */
-    getCount: function (num) {
-      if (num == '' || num == 'null' || !num || num == 'undefined') {
-        num = 0;
+  /**
+   * 手机号、银行卡号处理
+   */
+  getStarNumberStr: function (str,headLength,footLength) {
+      var headIndex = headLength;
+      var footIndex = str.length - footLength;
+      var starLength = str.length - headLength - footLength;
+      var head = str.substring(0,headIndex);
+      var footer = str.substring(footIndex, str.length);
+      var star = "";
+      for(var x = 0; x < starLength; x++) {
+        star += "*";
       }
-      return num;
+      return head + star + footer;
+  },
+
+  /**
+   * 手机号、银行卡混合模式
+   */
+  getStarNumberStrMix: function (str) {
+    
+    if (str.length == 11) {
+      // 手机号，默认3，4
+      str = filters.getStarNumberStr(str,3,4);
     }
+    if (str.length > 11) {
+      // 银行卡，默认5，4
+      str = filters.getStarNumberStr(str,5,4);
+    }
+
+    return str;
+  },
+
+  /**
+   * 价格过滤
+   */
+  getPriceStr: function (str) {
+    if (str == "" || str == "null" || str == null || str == "undefined" || str == undefined || parseFloat(str) == 0) {
+        str = "免费";
+    } else {
+        str = "￥" + parseFloat(str).toFixed(2);
+    }
+    return str;
+  },
+
+  /**
+   * 健身次数过滤
+   */
+  getCount: function (num) {
+    if (num == '' || num == 'null' || !num || num == 'undefined') {
+      num = 0;
+    }
+    return num;
+  },
+
+  overflow_hidden_strnull: function (text, length) {
+    if (text) {
+      if (text.length > length) {
+        text = text.substring(0, length) + '...';
+      }
+    } else {
+      text = '该教练太忙了，还没有时间介绍自己。请你提醒TA抽空写写自己的介绍';
+    }
+    return text;
+  },
 }
 
 // 暴露接口
@@ -145,5 +156,6 @@ module.exports = {
   getStarNumberStr: filters.getStarNumberStr,
   getStarNumberStrMix: filters.getStarNumberStrMix,
   getPriceStr: filters.getPriceStr,
-  getCount: filters.getCount
+  getCount: filters.getCount,
+  overflow_hidden_strnull: filters.overflow_hidden_strnull
 }
