--- a/pages/coachDetail/coachDetail.wxss
+++ b/pages/coachDetail/coachDetail.wxss
@@ -1,4 +1,3 @@
-/**index.wxss**/
 page{
   width: 100%;
   height: 100%;
@@ -7,14 +6,22 @@ page{
 }
 
 .wraper{
-  background-color: #212F3D;
+  position: relative;
+  background-color: #E1E4E6;
   font-size: 14px;
 }
 
+.wraper>image{
+  width: 100%;
+  height: 342rpx;
+  overflow: hidden;
+}
+
 .coach{
-  background-image: 
-  url("https://www.ecartoon.com.cn/miniProgram/coach/img/background1.png");
-  background-size: 100% 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .coachInfo{
@@ -101,6 +108,7 @@ page{
 .privateTitle{
   padding: 10px;
   color: #545556;
+  border-bottom: 2rpx solid #f0f0f2;
 }
 
 .privateContent{
@@ -141,8 +149,9 @@ page{
 
 .productImage{
   position: relative;
-  width: 141.2px;
-  height: 106px;
+  width: 220rpx;
+  height: 165rpx;
+  
 }
 
 .productImage > image{
@@ -158,7 +167,7 @@ page{
 }
 
 .productPrice{
-  padding: 10px;
+  padding: 10rpx 20rpx;
   background-color: rgba(0, 0, 0, 0.3);
   color: #FFF;
 }
@@ -177,6 +186,7 @@ page{
 .planTitle{
   padding: 10px;
   color: #545556;
+  border-bottom: 2rpx solid #f0f0f2;
 }
 
 .planProduct{
@@ -187,8 +197,8 @@ page{
 .planProduct-image{
   float: left;
   margin-right: 10px;
-  width: 173.5px;
-  height: 97.5px;
+  width: 242rpx;
+  height: 181.5rpx;
 }
 
 .planProduct-image > image{
@@ -199,5 +209,10 @@ page{
 .planProduct-content{
   float: left;
   width: 150px;
+}
+
+.privateFill{
+  height:10px;
+  background-color:#E1E4E6;
 }
 
