--- a/pages/coachDetail/coachDetail.wxss
+++ b/pages/coachDetail/coachDetail.wxss
@@ -13,7 +13,7 @@ page{
 
 .wraper>image{
   width: 100%;
-  height: 342rpx;
+  height: 170px;
   overflow: hidden;
 }
 
@@ -22,6 +22,7 @@ page{
   top: 0;
   left: 0;
   width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .coachInfo{
@@ -62,44 +63,30 @@ page{
 }
 
 .coachCourse{
-   width: 170rpx;
-   height: 60rpx;
-   margin-top: -60rpx;
+   width: 65px;
+   height: 30px;
+   margin-top: -30px;
 }
 
 .coachOther{
   overflow: hidden;
-  height: 40px;
+  border-top: 1px solid #FFF;
+  margin-top: 10px;
 }
 
-.brief{
+.other{
   float: left;
   width: 33.1%;
   text-align: center;
-  line-height: 40px;
+  line-height: 32px;
   color: #FFF;
-  border-top: 1px solid #FFF;
-  border-right: 1px solid #FFF;
+  border-right: 1px solid #fff;
 }
 
-.service{
-  float: left;
-  width: 33.1%;
-  text-align: center;
-  line-height: 40px;
-  color: #FFF;
-  border-top: 1px solid #FFF;
+.other:last-child{
+  border-right: none;
 }
 
-.employ{
-  float: left;
-  width: 33.1%;
-  text-align: center;
-  line-height: 40px;
-  color: #FFF;
-  border-top: 1px solid #FFF;
-  border-left: 1px solid #FFF;
-}
 
 .privatePackage{
   background-color: #FFF;
@@ -108,7 +95,7 @@ page{
 .privateTitle{
   padding: 10px;
   color: #545556;
-  border-bottom: 2rpx solid #f0f0f2;
+  border-bottom: 1px solid #f0f0f2;
 }
 
 .privateContent{
@@ -149,8 +136,8 @@ page{
 
 .productImage{
   position: relative;
-  width: 220rpx;
-  height: 165rpx;
+  width: 110px;
+  height: 82.5px;
   
 }
 
@@ -167,7 +154,7 @@ page{
 }
 
 .productPrice{
-  padding: 10rpx 20rpx;
+  padding: 5px 10px;
   background-color: rgba(0, 0, 0, 0.3);
   color: #FFF;
 }
@@ -186,19 +173,24 @@ page{
 .planTitle{
   padding: 10px;
   color: #545556;
-  border-bottom: 2rpx solid #f0f0f2;
+  border-bottom: 1px solid #f0f0f2;
 }
 
 .planProduct{
   padding: 10px;
   overflow: hidden;
+  border-bottom: 1px solid #f0f0f2;
+}
+
+.planProduct:last-child{
+  border-bottom: none;
 }
 
 .planProduct-image{
   float: left;
   margin-right: 10px;
-  width: 242rpx;
-  height: 181.5rpx;
+  width: 121px;
+  height: 91px;
 }
 
 .planProduct-image > image{
@@ -208,11 +200,17 @@ page{
 
 .planProduct-content{
   float: left;
-  width: 150px;
+  width: 220px;
 }
 
-.privateFill{
-  height:10px;
-  background-color:#E1E4E6;
+.price{
+  margin-top:5px;
+  color:#ff4401;
 }
+
+
+.handlerImage{
+  display: block;
+}
+
 
