--- a/pages/coachCourseDeal/coachCourseDeal.wxml
+++ b/pages/coachCourseDeal/coachCourseDeal.wxml
@@ -7,21 +7,21 @@
              <view class="courseTitle">课程名称</view>
              <view class="courseValue">
                   <picker value="{{index}}" range="{{courseNames}}" bindchange="bindPickerChange">
-                         <view>{{courseNames[index]}}<text> ></text></view>
+                         <view class='value'>{{courseNames[index]}}<text> ></text></view>
                   </picker>
               </view>
          </view>
          <!-- 教练 -->
          <view  class="course">
              <view class="courseTitle">教练</view>
-             <view class="courseValue">{{coachName}}</view>
+             <view class="courseValue value">{{coachName}}</view>
          </view>
          <!-- 课程日期 -->
          <view  class="course">
              <view class="courseTitle">课程日期</view>
              <view class="courseValue">
                  <picker mode="date" value="{{courseDate}}" start="{{startDate}}" bindchange="bindcourseDateChange">
-                     <view class="courseDate">{{courseDate}}</view>
+                     <view class="courseDate value">{{courseDate}}</view>
                  </picker>
              </view>
          </view>
@@ -30,7 +30,7 @@
              <view class="courseTitle">开始时间</view>
              <view class="courseValue">
                   <picker mode="time" value="{{startTime}}" start="08:00" end="21:00" bindchange="bindStartTimeChange">
-                          <view class="startTime" >{{startTime}}</view>
+                          <view class="startTime value" >{{startTime}}</view>
                   </picker>  
              </view>
          </view>
@@ -39,14 +39,14 @@
              <view class="courseTitle">结束时间</view>
              <view class="courseValue">
                   <picker mode="time" value="{{endTime}}" start="09:00" end="22:00" bindchange="bindEndTimeChange">
-                    <view class="startTime" >{{endTime}}</view>
+                    <view class="startTime value" >{{endTime}}</view>
                   </picker>
              </view>
          </view>
          <!-- 课程地址 -->
          <view  class="course">
              <view class="courseTitle">课程地址</view>
-             <view class="courseValue courseInput"><input class="douInput" placeholder-class="courseAddress" placeholder="请输入课程地址" bindinput="bindInputCourseAddress"></input></view>
+             <view class="courseValue courseInput value"><input class="douInput" placeholder-class="courseAddress" placeholder="请输入课程地址" bindinput="bindInputCourseAddress"></input></view>
          </view>
         
     </view>
