--- a/pages/coachDetail/coachDetail.wxml
+++ b/pages/coachDetail/coachDetail.wxml
@@ -70,9 +70,7 @@
               <view class='price'>
                 ¥{{filter.toFixed(item.unit_price, 2)}}
               </view>
-              <view style='margin-top:5px;font-size:12px;color:#898A8C;word-break:break-all;'>
-               {{filter.overflow_hidden(item.briefing, 30)}}
-              </view>
+              <view style='margin-top:5px;font-size:12px;color:#898A8C;word-break:break-all;'>{{filter.overflow_hidden(item.briefing, 30)}}</view>
 
         </view>
 
